--- a/O que você ouve, na verdade é que o você é/musica2.html
+++ b/O que você ouve, na verdade é que o você é/musica2.html
@@ -15,7 +15,7 @@
         </div>
     </header>
     <div class="musica2spotify">
-        <p>xxtentacion - Fuck Love feat. Trippie Redd</p>
+        <p>xxxtentacion - Fuck Love feat. Trippie Redd</p>
         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7AQim7LbvFVZJE3O8TYgf2?utm_source=generator" width="20%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
 
